assert-struct/tests/snapshots/enum_struct_patterns__enum_struct_comparison_failure.snap
---
source: assert-struct/tests/enum_struct_patterns.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/enum_struct_patterns_errors/enum_struct_comparison_failure.rs:31:25
   |
31 |             limit: Some(> 50),  // This will fail: 25 is not > 50
   |                         ^^^^ got 25
